@@ -4393,6 +4393,10 @@
 	<argument separated="true">selection equation</argument>
       </arguments>
       <options>
+	<option>
+	  <flag>--robust</flag>
+	  <effect>QML standard errors</effect>
+        </option>
         <option>
 	  <flag>--two-step</flag>
 	  <effect>perform two-step estimation</effect>
