@@ -206,6 +206,7 @@ struct gretl_option gretl_opts[] = {
     { GNUPLOT,  OPT_Y, "single-yaxis", 0 },
     { GNUPLOT,  OPT_X, "matrix", 2 },
     { HECKIT,   OPT_M, "ml", 0 },
+    { HECKIT,   OPT_R, "robust", 0 },
     { HECKIT,   OPT_T, "two-step", 0 },
     { HECKIT,   OPT_V, "verbose", 0 },
     { HELP,     OPT_F, "func", 0 },
